# agentlens

./: .gitignore  README.md  STATE.md
docs/: architecture.md  decisions.md  product-spec.md  roadmap.md  ui-spec.md
extension/: .vscodeignore  esbuild.config.js  package-lock.json  package.json
extension/src/: client.ts  extension.ts  store.ts  types.ts
extension/src/panels/: ContextPanel.ts  CurrentStatePanel.ts  ExecutionTreePanel.ts  InspectorPanel.ts  LiveMetricsPanel.ts  SessionListPanel.ts  StatusPanel.ts
sdk/: pyproject.toml
sdk/agentlens/: __init__.py  bootstrap.py  event_bus.py  models.py  schema.py  server.py  session.py  tracer.py
sdk/agentlens/adapters/: __init__.py  base.py  manager.py  openai.py
sdk/examples/: demo_agent.py  simple_agent.py
sdk/tests/: test_bootstrap.py  test_decorator.py  test_event_bus.py  test_models.py  test_schema.py  test_server.py  test_session.py  test_tracer.py
sdk/tests/adapters/: test_manager.py  test_openai.py
ui/: package-lock.json
